crates/strider-analyze/tests/snapshots/v3__x86_kernel__memory__array_copy.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v10" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v10" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v12" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "11" -> "v12" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "11" -> "v10" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "9" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "14" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v6" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v12" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v16" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "15" -> "v16" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v17" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "15" -> "v17" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "14" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "19" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v20" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v20" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v17" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v22" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "21" -> "v22" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "21" -> "v20" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "19" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "24" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v16" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v22" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "24" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "28" -> "25" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "29" -> "25" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="φ EDX", shape=house, fillcolor="#163030"];
  "24" -> "28" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "31" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "31" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "32" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="φ EDX", shape=house, fillcolor="#163030"];
  "19" -> "33" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "32" -> "33" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="φ EAX", shape=house, fillcolor="#163030"];
  "24" -> "27" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "36" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "36" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "37" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="φ EDI", shape=house, fillcolor="#163030"];
  "14" -> "39" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "42" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="φ EDI", shape=house, fillcolor="#163030"];
  "9" -> "43" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "42" -> "43" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="φ Mem", shape=house, fillcolor="#163030"];
  "24" -> "26" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "46" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "49" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "51" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "49" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="φ Mem", shape=house, fillcolor="#163030"];
  "19" -> "49" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "48" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" [label="φ Mem", shape=house, fillcolor="#163030"];
  "14" -> "47" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "46" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "57" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" -> "56" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "59" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "57" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "59" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "60" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0xc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "65" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "66" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "67" -> "57" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "65" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "68" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "71" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "72" -> "65" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "73" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "71" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "74" -> "73" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "74" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "77" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "78" -> "71" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "79" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "77" -> "79" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "80" -> "79" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "80" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="φ Mem", shape=house, fillcolor="#163030"];
  "9" -> "77" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "56" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "81" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "83" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "81" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "84" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v85" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v85" -> "81" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "86" -> "81" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "86" [label="init\nEDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "84" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "87" -> "84" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v88" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v88" -> "84" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "89" -> "84" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "89" [label="init\nEBX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "87" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "78" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "90" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "90" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "91" -> "90" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "91" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "90" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "92" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "92" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "93" -> "92" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "92" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "94" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "94" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "95" -> "94" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "95" [label="const 0xc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "94" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "96" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "96" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "97" -> "96" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "98" -> "96" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "98" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "97" [label="arg[2] ← ECX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "96" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "99" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "99" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "100" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "100" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "97" -> "100" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "101" -> "100" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "101" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "102" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "103" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "103" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "102" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "97" -> "102" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "104" -> "102" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "104" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "97" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "105" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "105" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
